[package]
name = "skylights"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Arturo Castro Prieto"
description = "Skylights is a command line tool to bake radiance and irradiance maps for image based lighting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-intrusive = "0.5.0"
image = "0.24.7"
wgpu = "0.17.0"
libhdr = {version = "0.1.1", registry="rin-rs"}
dds = {version = "0.2", registry="rin-rs"}
libktx-rs-sys = "0.3.3+v4.0.0"



[profile.debug-optimized]
inherits = "release"
opt-level = "s"
debug = true
codegen-units = 256
incremental = true
lto = false